--- a/alap.css
+++ b/alap.css
@@ -3,7 +3,7 @@
 .oldal{
 	width: 100%;
 	height:100%;
-	background-image: url(css/hatter.jpg);
+	background-image: url(hatter.jpg);
 }
 
 
@@ -17,7 +17,7 @@
   top: 0;
   width: 100%;
   height: 55px;
-  background-image: url(css/hatter.jpg);
+  background-image: url(hatter.jpg);
 }
 
 
